--- a/src/composer.json
+++ b/src/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "psr/http-message": "^2.0"
+        "psr/http-message": "^2.0",
+        "psr/http-factory": "^1.0"
     },
     "autoload": {
         "psr-4": {
