--- a/src/composer.json
+++ b/src/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
         "psr/http-message": "^2.0",
-        "psr/http-factory": "^1.0"
+        "psr/http-factory": "^1.0",
+        "psr/http-server-middleware": "^1.0",
+        "psr/http-server-handler": "^1.0"
     },
     "autoload": {
         "psr-4": {
