--- a/src/composer.json
+++ b/src/composer.json
@@ -3,7 +3,8 @@
         "psr/http-message": "^2.0",
         "psr/http-factory": "^1.0",
         "psr/http-server-middleware": "^1.0",
-        "psr/http-server-handler": "^1.0"
+        "psr/http-server-handler": "^1.0",
+        "psr/container": "^2.0"
     },
     "autoload": {
         "psr-4": {
