--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "psr/http-factory": "^1.0",
         "psr/http-server-middleware": "^1.0",
         "psr/http-server-handler": "^1.0",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "vlucas/phpdotenv": "^5.5"
     },
     "autoload": {
         "psr-4": {
