--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.1'
 
-# TODO: Change config so everything is redirected towards public/index.php
-
 services:
   php:
+    container_name: events-app
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,15 +11,17 @@ services:
     volumes:
       - ../:/var/www/html/
   db:
-    image: mysql
-    # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
-    # (this is just an example, not intended to be a production configuration)
-    command: --default-authentication-plugin=mysql_native_password
+    container_name: events-db
+    image: mysql:8.0
+    volumes:
+      - ./storage/mysql:/var/lib/mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
-  adminer:
-    image: adminer
-    restart: always
+      MYSQL_ROOT_PASSWORD: root
     ports:
-      - 8080:8080
+      - 3306:3306
+  # adminer:
+  #   image: adminer
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
