--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "App\\": "app/",
             "Framework\\": "framework/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.3"
     }
 }
