--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Framework\\": "framework/"
+            "Framework\\": "framework/",
+            "Tests\\": "tests/"
         }
     },
     "require-dev": {
