--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "psr/http-server-middleware": "^1.0",
         "psr/http-server-handler": "^1.0",
         "psr/container": "^2.0",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "psr/log": "^3.0"
     },
     "autoload": {
         "psr-4": {
