--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "psr/http-server-handler": "^1.0",
         "psr/container": "^2.0",
         "vlucas/phpdotenv": "^5.5",
-        "psr/log": "^3.0"
+        "psr/log": "^3.0",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
