--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,13 @@ services:
       - 80:80
     volumes:
       - ../:/var/www/html/
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      XDEBUG_MODE: develop,debug
+      XDEBUG_CONFIG:
+        client_host=host.docker.internal
+        starts_with_request=yes
   db:
     container_name: events-db
     image: mysql:8.0
@@ -20,8 +27,3 @@ services:
       MYSQL_ROOT_PASSWORD: root
     ports:
       - 3306:3306
-  # adminer:
-  #   image: adminer
-  #   restart: always
-  #   ports:
-  #     - 8080:8080
