Session model classes

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_DEBUG=true # Use when deciding how to handle exceptions
+APP_NAME=EventCMS
+APP_DEBUG=true # Used when deciding how to handle exceptions
 
 DB_HOST=
 DB_PORT=
