--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "psr/container": "^2.0",
         "vlucas/phpdotenv": "^5.5",
         "psr/log": "^3.0",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "ramsey/uuid": "^4.7"
     },
     "autoload": {
         "psr-4": {
