--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
         "psr/container": "^2.0",
         "vlucas/phpdotenv": "^5.5",
         "psr/log": "^3.0",
-        "twig/twig": "^3.0",
-        "ramsey/uuid": "^4.7"
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -17,7 +16,7 @@
             "Tests\\": "tests/"
         }
     },
-    "require-dev": {
-        "phpunit/phpunit": "^10.3"
+    "config": {
+        "platform-check": false
     }
 }
