--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     },
     "config": {
         "platform-check": false
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.6"
     }
 }
